# TexSynth

./: CMakeLists.txt  FileDialog.cpp  FileDialog.h  README.md  Synthetizer.cpp  Synthetizer.h  main.cpp  renderer.cpp  renderer.h
shader/: render.fp  render.vp
